# vatek_sdk_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/core/: CMakeLists.txt
api/core/cmake/: core.rc.in
api/core/inc/: vatek_sdk_bridge.h  vatek_sdk_broadcast.h  vatek_sdk_device.h  vatek_sdk_storage.h  vatek_sdk_transform.h  vatek_sdk_usbmux.h  vatek_sdk_usbstream.h
api/core/inc/bridge/: bridge_base.h  bridge_demod.h  bridge_device.h  bridge_rfmixer.h  bridge_source.h  bridge_usb.h
api/core/inc/bridge/ui/: ui_bridge_base.h  ui_bridge_source.h
api/core/inc/core/: vatek_base.h
api/core/inc/core/base/: binary_rom.h  calibration_define.h  chip_define.h  device_usb.h  media_audio.h  media_video.h  (+5 more)
api/core/inc/cross/: cross_bridge.h  cross_os_api.h  cross_stream.h  cross_usb_device.h  cross_usb_device_winusb.h
api/core/inc/mux/: mux_define.h  mux_epg.h  mux_handle.h  mux_packet.h  mux_rule.h  mux_spec.h  mux_time.h
api/core/inc/service/: service_base.h  service_broadcast.h  service_transform.h
api/core/src/: vatek_sdk_base.c  vatek_sdk_bridge.c  vatek_sdk_broadcast.c  vatek_sdk_device.c  vatek_sdk_storage.c  vatek_sdk_transform.c  vatek_sdk_usbmux.c  vatek_sdk_usbstream.c
api/core/src/core/: calibration_define.c  chip_define.c  device_usb.c  output_modulator.c  output_rfmixer.c  storage_default.c  storage_section.c  stream_base.c  stream_encoder.c  tool_8vsb.c  tool_binary_crc.c  tool_bufstream.c  tool_crc32.c  tool_dtmb.c  tool_dvb.c  tool_dvb_t2.c  tool_helpful_bitstream.c  tool_helpful_circlebuf.c  tool_helpful_fifo.c  tool_helpful_mempool.c  tool_helpful_memquery.c  tool_helpful_objectlist.c  tool_isdb_t.c  tool_j83abc.c  tool_ofdm.c  tool_output.c  ui_props_api.c
api/core/src/cross/: cross_bridge.c  cross_bridge_board.c  cross_os_api.c  cross_os_socket.c  cross_stream.c  cross_stream_file.c  cross_stream_mux.c  cross_stream_test.c  cross_stream_udp.c  cross_usb_device_libusb.c  cross_usb_device_winusb.c  libusb_tool.c
api/core/src/device/: cross_device_bridge.c  cross_device_tool.c  cross_device_usb.c  mux_usbstream.c
api/core/src/mux/: mux_epg.c  mux_hadnel_playload.c  mux_handle_broadcast.c  mux_handle_channel.c  mux_handle_core.c  mux_handle_raw.c  mux_packet_base.c  mux_packet_pes.c  mux_rule.c  mux_spec.c  mux_time.c  mux_tool_tick.c
api/core/src/service/: service_base.c  service_broadcast.c  service_transform.c
api/qt/: CMakeLists.txt
api/qt/cmake/: qt.rc.in
api/qt/inc/chart/: qtv_chart_define.h  qtv_chart_ui.h
api/qt/inc/core/: qtv_define.h  qtv_device.h  qtv_dtv.h  qtv_media.h  qtv_mux.h  qtv_property.h  qtv_service.h  qtv_service_usb.h  qtv_source.h  raii_dll.h
api/qt/inc/ui/: qtv_ui_app.h  qtv_ui_service_base.h  qtv_ui_service_usb.h
api/qt/src/: qtv_chart_base.cpp  qtv_chart_service_chip.cpp  qtv_chart_ui.cpp  qtv_device.cpp  qtv_dtv.cpp  qtv_media.cpp  qtv_mux.cpp  qtv_properties.cpp  qtv_property.cpp  qtv_service_base.cpp  qtv_service_broadcast.cpp  qtv_service_handle.cpp  qtv_service_transform.cpp  qtv_service_usbmuxer.cpp  qtv_source_base.cpp  qtv_source_bridge.cpp  qtv_source_encoder.cpp  qtv_source_usbstream.cpp  qtv_ui_app.cpp  qtv_ui_config.cpp  qtv_ui_editor.cpp  qtv_ui_hex.cpp  qtv_ui_list.cpp  qtv_ui_main.cpp  qtv_ui_resource.cpp  qtv_ui_service_base.cpp  qtv_ui_service_usb.cpp  qtv_ui_tab.cpp  qtv_ui_table.cpp  qtv_ui_tree.cpp  qtv_ui_wizard.cpp
api/qt/src/internal/: qinternal_broadcast.h  qinternal_chart.h  qinternal_core.h  qinternal_dtv.h  qinternal_media.h  qinternal_mux.h  qinternal_properties.h  qinternal_transform.h  qinternal_ui.h  qinternal_usbmuxer.h
api/qt/src/resource/: qtv_toolkit.qrc
api/qt/src/storage/: bootlogo.cpp  bootlogo.ui  qtvUIStorage.cpp  qtvUIStorageInfo.cpp  qtvUIStorageInfo.ui  qtvUIStorageProps.cpp  qtvUIStorageProps.ui  qtvUIStorageR2Tune.cpp  qtvUIStorageR2Tune.ui
api/qt/src/tabs/: qtvUITabCalibration.cpp  qtvUITabCalibration.ui  qtvUITabConfigs.cpp  qtvUITabConfigs.ui  qtvUITabContext.cpp  qtvUITabContext.ui  qtvUITabDevice.cpp  qtvUITabDevice.ui  qtvUITabDtv.cpp  qtvUITabDtv.ui  qtvUITabEnum.cpp  qtvUITabEnum.ui  qtvUITabNoDevice.cpp  qtvUITabProperties.cpp  qtvUITabProperties.ui  qtvUITabSimple.cpp  qtvUITabSimple.ui  qtvUITabSource.cpp  qtvUITabSource.ui  qtvUITabStatus.cpp  qtvUITabStatus.ui
app/vatek_factory/: CMakeLists.txt
app/vatek_factory/cmake/: factory.rc.in
app/vatek_factory/inc/: openfiledlg.h  vatek_factory.h
app/vatek_factory/src/: main.cpp  openfiledlg.cpp  vatek_factory.cpp
app/vatek_factory/src/resource/: openfiledlg.ui  vatek_factory.ui
app/vatek_romtool/: CMakeLists.txt
app/vatek_romtool/cmake/: app.rc.in
app/vatek_romtool/inc/: progressdlg.h  storage_device.h  vatek_romtool.h
app/vatek_romtool/src/: main.cpp  progressdlg.cpp  storage_device.cpp  vatek_romtool.cpp
app/vatek_romtool/src/resource/: progressdlg.ui  vatek_romtool.ui
app/vatek_toolkit/: CMakeLists.txt
app/vatek_toolkit/cmake/: toolkit.rc.in
app/vatek_toolkit/inc/: vatek_toolkit.h
app/vatek_toolkit/src/: main.cpp  vatek_toolkit.cpp
app/vatek_toolkit/src/resource/: select_device.ui  vatek_toolkit.ui
extend/obs-vatek/: CMakeLists.txt  obs-vatek.code-workspace
extend/obs-vatek/data/locale/: en-US.ini
extend/obs-vatek/installer/: installer-Windows.generated.iss  installer-macOS.generated.pkgproj
extend/obs-vatek/source/inc/: obs_vatek.h
extend/obs-vatek/source/src/: obs_vatek.cpp  obs_vatek_handle.cpp  obs_vatek_output.cpp  ovatek_codec.cpp  ovatek_codec_aac.cpp  ovatek_codec_nvenc.cpp  ovatek_codec_param.cpp  ovatek_codec_qsv.cpp  ovatek_codec_stream.cpp  ovatek_ffmpeg.cpp  ovatek_ffmpeg_audio.cpp  ovatek_ffmpeg_video.cpp  ovatek_frame.cpp  ovatek_plugin_output.cpp
extend/tsduck-vatek/: CMakeLists.txt
extend/tsduck-vatek/inc/: tsduck_vatek_output.h
extend/tsduck-vatek/src/: tsduck_vatek_main.cpp  tsduck_vatek_modulation.cpp  tsduck_vatek_output.cpp
sample/app_bridge/: CMakeLists.txt  app_bridge.c
sample/app_broadcast/: CMakeLists.txt  app_broadcast.c
sample/app_romtool/: CMakeLists.txt  app_romtool.c
sample/app_stream/: CMakeLists.txt  app_stream.c
(+371 files in other folders)
